<?xml version="1.0"?>
<package format="2">
  <name>ip50_description</name>
  <version>0.1.0</version>
  <maintainer email="neo@floatic.io">neo</maintainer>
  <description>
    ip50's 3D model for simulation and visualization
  </description>
  <author email="neo@floatic.io">neo</author>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
